@@ -1,3 +1,3 @@
-VERSION=4.06.00
+VERSION=4.06.01
 YEARS=2005-2017
 
