@@ -2,29 +2,24 @@
 #define INCLUDED_BOBCAT_BINOPSBASE_
 
 #include <utility>
+#include <istream>
+#include <ostream>
 
 namespace FBB
 {
-
-//////////////////////////////////////////////////////////////////
-    // The recursively defined BinopsBase0 class: receives Binops, so a static
+    // The recursively defined BinopsBase0 class: receives so a static
     // cast becomes available to reach the basic arithmetic classes
 
     // The general declaration:
     //
-template <class Binops, class Derived, int ...ops>
+template <class Derived, int ...ops>
 class BinopsBase0;
 
     // The terminating definition:
     //
-template <class Binops, class Derived>
-class BinopsBase0<Binops, Derived>
+template <class Derived>
+class BinopsBase0<Derived>
 {};
-
-template <class Derived, int ...ops>
-class BinopsBase;
-
-//////////////////////////////////////////////////////////////////
 
 #include "mul.f"
 #include "div.f"
@@ -36,6 +31,8 @@ class BinopsBase;
 #include "and.f"
 #include "or.f"
 #include "xor.f"
+#include "insert.f"
+#include "extract.f"
 
     // The class BinopsBase befriends all arithmetic classes, and implements
     // wrappers for the arithmetic functions potentially defined in
@@ -46,8 +43,7 @@ class BinopsBase;
     // arent't instantiated so there are no linker-errors
     //
 template <class Derived, int ...ops>
-class BinopsBase:
-    public BinopsBase0<BinopsBase<Derived, ops...>, Derived, ops...>
+class BinopsBase: public BinopsBase0<Derived, ops...>
 {
 #include "friends.f"
 
@@ -58,3 +54,6 @@ class BinopsBase:
 
 } // FBB        
 #endif
+
+
+
