@@ -15,11 +15,14 @@ overload these binary operators to suit its own needs, allowing, e.g., two
 tt(Class) type objects to be added after overloading tt(operator+). Operators
 for the binary operators *, /, %, +, -, <<, >>, &, |, and ^ (in this man-page
 they are generically indicated as the `tt(@)' operator) can be overloaded by
-providing various tt(operator@) members and functions.
+providing various tt(operator@) members and functions. In addition, overloaded 
+tt(operator<<) and tt(operator>>) for stream insertion and extraction can
+easily be defined.
 
     If a class supports copy and/or move construction and if it offers a swap
 member, then binary operators can all be implemented identically, except for
-the specific details associated with specific binary operators. E.g., if a
+the specific details associated with specific binary operators. A similar
+observation applies to the insertion and extraction operators. E.g., if a
 class contains two tt(int) data members addition of objects of that class
 could simply be defined as adding the corresponding tt(int) members, while
 subtraction could be defined as subtracting the corresponding tt(int)
@@ -49,31 +52,34 @@ members implementing the implied operations, these operators can very well be
 provided using templates. 
 
 By inheriting from the class template tt(BinopsBase) classes offering such
-specific functions can a particular tt(operator@=) then automatically also
-offers the matching binary operators after including
-tt(bobcat/binopsbase). Since the binary function templates are not
-instantiated until used their definitions can be processed by the compiler
-even if a class implements only a subset of the available binary assignment
+specific functions may then automatically add the corresponding compound
+assignment operators and the matching binary operators. Since the function
+templates are not instantiated until used their definitions can be processed
+by the compiler even if a class implements only a subset of the available
 operators.
 
 To provide a class tt(Class) with binary operators (and binary compound
-operators) the class tt(Class) must implement a member tt(void swap(Class
-&other)), and it should implement (a subset of) the following members
-(preferably in the class's private section):
+operators) tt(Class) must implement a member tt(void swap(Class &other)), and
+it should implement (a subset of) the following members (preferably in the
+class's private section):
     itemization(
-    itt(void mul(Class const &rhs))  - to provide operators tt(*) and tt(*=)
-    itt(void div(Class const &rhs))  - to provide operators tt(/) and tt(/=)
-    itt(void mod(Class const &rhs))  - to provide operators tt(%) and tt(%=)
-    itt(void add(Class const &rhs))  - to provide operators tt(+) and tt(+=)
-    itt(void sub(Class const &rhs))  - to provide operators tt(-) and tt(-=)
-    itt(void shl(Class const &rhs)) - to provide operators tt(<<) and tt(<<=)
-    itt(void shr(Class const &rhs)) - to provide operators tt(>>) and tt(>>=)
-    itt(void and_(Class const &rhs)) - to provide operators tt(&) and tt(&=)
-    itt(void or_(Class const &rhs))  - to provide operators tt(|) and tt(|=)
-    itt(void xor_(Class const &rhs)) - to provide operators tt(^) and tt(^=)
+    itt(void mul(Class const &rhs))  - called by operators tt(*) and tt(*=)
+    itt(void div(Class const &rhs))  - called by operators tt(/) and tt(/=)
+    itt(void mod(Class const &rhs))  - called by operators tt(%) and tt(%=)
+    itt(void add(Class const &rhs))  - called by operators tt(+) and tt(+=)
+    itt(void sub(Class const &rhs))  - called by operators tt(-) and tt(-=)
+    itt(void shl(Class const &rhs)) - called by operators tt(<<) and tt(<<=)
+    itt(void shr(Class const &rhs)) - called by operators tt(>>) and tt(>>=)
+    itt(void and_(Class const &rhs)) - called by operators tt(&) and tt(&=)
+    itt(void or_(Class const &rhs))  - called by operators tt(|) and tt(|=)
+    itt(void xor_(Class const &rhs)) - called by operators tt(^) and tt(^=)
+    itt(void extract(std::istream &in) const) - called by 
+                        tt(operator>>(std::istream &in, Class &obj))
+    itt(void insert(std::ostream &out) const) - called by 
+                        tt(operator<<(std::ostream &out, Class const &obj))
     )
     Note the trailing underscore for the members tt(and_, or_), and tt(xor_):
-the underscores are used to prevent conflicts with the tt(and, or,) and
+the underscores are there to prevent conflicts with the tt(and, or,) and
 tt(xor) keywords.
 
     Next, tt(Class) should publicly inherit from
@@ -82,7 +88,7 @@ tt(xor) keywords.
         )
     where tt(int ...operators) lists the specific set of binary operators that
 are requested. E.g., to provide tt(Class) with multiplication, division,
-modulo, and shit-operators its class interface should start as shown:
+modulo, and shift-operators its class interface should start as shown:
         verb(
     class Class: public FBB::BinopsBase<Class, '*', '/', '%', '<', '>'>
         )
@@ -90,7 +96,8 @@ modulo, and shit-operators its class interface should start as shown:
 ...operators). Note that tt('<') and tt('>') in the tt(int ...operators) list
 specify, respectively, the shift-left and shift-right operators. All other
 operators are specified by their common operator, specified as character
-constants. 
+constants. The insertion operator is specified by tt('i'), the extraction
+operator by tt('e').
 
     If, as advised, the members implementing the required binary operations
 are declared in the class's private section then the class's interface should
@@ -134,6 +141,16 @@ operators are now available:
         Class &operator@(Class const &rhs) &;
         Class &&operator@(Class const &rhs) &&;
     )
+
+    The insertion operator is available when specifying tt('i'):
+    verb(
+    std::ostream &operator<<(std::ostream &out, Class const &obj);
+    )
+    The extraction operator is available when specifying tt('e'):
+    verb(
+    std::istream &operator>>(std::istream &in, Class &obj);
+    )
+    
 
 manpagesection(EXAMPLE)
     verbinclude(../../binopsbase/driver/driver.cc)
